Revert "fix(codegen): format string should use %n rather than \n"
This reverts commit f35cab403ace39a442ca163df0d275b52bd5ec77.